add class animal

--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -217,16 +217,16 @@
             y2="192"
             gradientUnits="userSpaceOnUse"
           >
-            <stop stop-color="#F0060B" />
-            <stop offset="0" stop-color="#F0070C" />
+            <stop stop-color="#52c544" />
+            <stop offset="0" stop-color="#44570C" />
             <stop offset=".526" stop-color="#CC26D5" />
             <stop offset="1" stop-color="#7702FF" />
           </linearGradient>
           <clipPath id="a"><path fill="#fff" d="M0 0h982v239H0z" /></clipPath>
         </defs>
       </svg>
-      <h1>Hello, {{ title }}</h1>
-      <p>Congratulations! Your app is running. 🎉</p>
+      <h1>LARA RM 95028, CHECKPOINT 2 MICROSSERVIÇOS</h1>
+      <p>Congratulations! Your app is running. S2 🎉</p>
     </div>
     <div class="divider" role="separator" aria-label="Divider"></div>
     <div class="right-side">
