--- a/my-app/src/app/animal-item/animal-item.component.html
+++ b/my-app/src/app/animal-item/animal-item.component.html
@@ -1,1 +1,6 @@
-<p>animal-item works!</p>
+<p>COMPONENTE ANIMAL</p>
+
+<p>NOme: {{animal.nome}}</p>
+<p>Especie: {{animal.especie}}</p>
+<p>Idade: {{animal.idade}}</p>
+<p>Sexo: {{animal.sexo}}</p>
