--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -179,6 +179,10 @@
 
 <main class="main">
   <div class="content">
+    <app-animal-item></app-animal-item>
+
+
+
     <div class="left-side">
       <svg
         xmlns="http://www.w3.org/2000/svg"
