ajuste app componente

--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -227,7 +227,7 @@
         </defs>
       </svg>
       <h1>LARA RM 95028, CHECKPOINT 2 MICROSSERVIÇOS</h1>
-      <p>Congratulations! Your app is running. S2 🎉</p>
+      <p>Congratulations! Your app is running🎉</p>
     </div>
     <div class="divider" role="separator" aria-label="Divider"></div>
     <div class="right-side">
