add all itens app hmtl

--- a/my-app/src/app/animal-page/animal-page.component.html
+++ b/my-app/src/app/animal-page/animal-page.component.html
@@ -1,4 +1,4 @@
-<div **ngFor="let animal of animals">
+<div *ngFor="let animal of animals">
   <app-animal-item [animal]="animal">
   </app-animal-item>
 </div>
